style:  fixed issues of appearance app on mobile screens

--- a/src/app/main/component/expeditions/expeditions.component.scss
+++ b/src/app/main/component/expeditions/expeditions.component.scss
@@ -7,14 +7,13 @@
   max-width: 1440px;
   margin-top: 148px;
   margin-bottom: 80px;
-
-  // border: 1px solid red;
 }
 
 .expeditions {
   width: 100%;
   margin-right: 80px;
   margin-left: 80px;
+
   &__title {
     @include h2-desktop($line-height: 65px);
   }
@@ -46,8 +45,6 @@
 
 @media (width < 1025px) {
   .container {
-    // margin-left: 48px;
-    // margin-right: 48px;
     margin-top: 148px;
     margin-bottom: 80px;
   }
@@ -66,6 +63,7 @@
     margin-right: 32px;
     margin-left: 32px;
     width: 100%;
+    overflow: hidden;
     &__title {
       @include h2-desktop($line-height: 35px);
     }
@@ -84,13 +82,13 @@
 
 @media (width < 391px) {
   .container {
-    // max-width: 358px;
+    width: 358px;
     margin-top: 105px;
     margin-bottom: 48px;
   }
   .expeditions {
-    margin-right: 16px;
-    margin-left: 16px;
+    margin-left: 0px;
+    overflow: visible;
     &__title {
       @include h2-mobile($line-height: 35px);
     }
